--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,8 +25,7 @@ jobs:
         python-version: "3.10"
     - name: build docker container
       run: |
-        docker build . --file Dockerfile --tag pwn-template:latest
-        docker run --rm -d pwn-template:latest
+        apt install -qy make && make docker
     - name: Test with pytest
       run: |
         pytest
