--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,7 +25,7 @@ jobs:
         python-version: "3.10"
     - name: build docker container
       run: |
-        apt install -qy make && make docker
+        sudo apt install -qy make && make docker
     - name: Test with pytest
       run: |
         pytest
