--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: Test the template
 
 on:
   push:
@@ -23,9 +23,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: build docker container
+    - name: Build Challenge Container
       run: |
-        sudo apt install -qy make && make docker
-    - name: Test with pytest
+        make docker
+    - name: Run Tests
       run: |
-        python3 -m pip install pytest && pytest
+        pip3 install pytest pwntools && pytest
